fix: update router component from BrowserRouter to HashRouter for better compatibility style: change color values in experience and project sections for improved readability

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -148,13 +148,13 @@ body { overflow-x: hidden; }
 
 .experience-duration {
   font-size: 12px;
-  color: hsl(268, 59%, 67%);
+  color: #ff528d;
   margin-bottom: 4px;
 }
 
 .experience-description {
   font-size: 13px;
-  color: hsl(220, 10%, 85%);
+  color: white;
   margin-top: 8px;
 }
 
@@ -179,13 +179,13 @@ body { overflow-x: hidden; }
 .project-description {
   font-size: 12px;
   margin-bottom: 4px;
-  color: hsl(220, 14%, 77%);
+  color: white
 }
 
 .project-tags {
   display: flex;
   flex-wrap: wrap;
-  gap: 4px;
+  gap: 10px;
   margin-bottom: 4px;
 }
 
